Fixed chrome filter neighborhoods overflowing

--- a/client/src/app/allCourses/allCourses.component.scss
+++ b/client/src/app/allCourses/allCourses.component.scss
@@ -315,6 +315,9 @@ $cardsVerticalSeparation: 36px;
             align-items: center;
             flex-shrink: 0;
             padding: 4px 0;
+            -webkit-column-break-inside: avoid;
+            page-break-inside: avoid;
+            break-inside: avoid;
             
             @media (max-width: 336px)
             {
